Added chat activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,4 +42,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_open_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tester"
+        tools:layout_editor_absoluteX="166dp"
+        tools:layout_editor_absoluteY="506dp" />
 </android.support.constraint.ConstraintLayout>
