--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#cc9900</color>
     <color name="colorPrimaryDark">#663300</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#b35900</color>
 </resources>
